--- a/js/views/planboard.html
+++ b/js/views/planboard.html
@@ -389,7 +389,7 @@
 
 
           <!-- timeline legenda content -->
-          <div class="legenda" ng-show="timeline.config.legenda">
+          <div class="legenda" ng-show="timeline.config.legendarer">
 
             <div class="legenda-row">
               <strong>Members</strong>
@@ -397,37 +397,55 @@
                 <li class="legenda-Available">
                   <label>
                     <div class="square"></div>
-                    <input type="checkbox" ng-model="legenda.members.available">Beschikbaar Beide
+                    <input  type="checkbox" 
+                            ng-click="alterLegenda(timeline.config.legenda)" 
+                            ng-model="timeline.config.legenda['com.ask-cs.State.Available']">
+                    Beschikbaar Beide
                   </label>
                 </li>
                 <li class="legenda-BeschikbaarNoord">
                   <label>
                     <div class="square"></div>
-                    <input type="checkbox" ng-model="legenda.members.north">Beschikbaar Noord
+                    <input  type="checkbox"
+                            ng-click="alterLegenda(timeline.config.legenda)" 
+                            ng-model="timeline.config.legenda['com.ask-cs.State.KNRM.BeschikbaarNoord']">
+                    Beschikbaar Noord
                   </label>
                 </li>
                 <li class="legenda-BeschikbaarZuid">
                   <label>
                     <div class="square"></div>
-                    <input type="checkbox" ng-model="legenda.members.south">Beschikbaar Zuid
+                    <input  type="checkbox" 
+                            ng-click="alterLegenda(timeline.config.legenda)" 
+                            ng-model="timeline.config.legenda['com.ask-cs.State.KNRM.BeschikbaarZuid']">
+                    Beschikbaar Zuid
                   </label>
                 </li>
                 <li class="legenda-SchipperVanDienst">
                   <label>
                     <div class="square"></div>
-                    <input type="checkbox" ng-model="legenda.members.service">Schipper Van Dienst
+                    <input  type="checkbox"   
+                            ng-click="alterLegenda(timeline.config.legenda)" 
+                            ng-model="timeline.config.legenda['com.ask-cs.State.KNRM.SchipperVanDienst']">
+                    Schipper Van Dienst
                   </label>
                 </li>
                 <li class="legenda-Unavailable">
                   <label>
                     <div class="square"></div>
-                    <input type="checkbox" ng-model="legenda.members.notAvailable">Niet Beschikbaar
+                    <input  type="checkbox" 
+                            ng-click="alterLegenda(timeline.config.legenda)" 
+                            ng-model="timeline.config.legenda['com.ask-cs.State.Unavailable']">
+                    Niet Beschikbaar
                   </label>
                 </li>
                 <li class="legenda-NotReached">
                   <label>
                     <div class="square"></div>
-                    <input type="checkbox" ng-model="legenda.members.notReached">Niet Bereikt
+                    <input  type="checkbox" 
+                            ng-click="alterLegenda(timeline.config.legenda)" 
+                            ng-model="timeline.config.legenda['com.ask-cs.State.Unreached']">
+                    Niet Bereikt
                   </label>
                 </li>
               </ul>
@@ -439,19 +457,25 @@
                 <li class="legenda-more">
                   <label>
                     <div class="square"></div>
-                    <input type="checkbox" ng-model="legenda.groups.more">More people
+                    <input  type="checkbox" 
+                            ng-click="alterLegenda(legenda)" 
+                            ng-model="legenda.groups.more">More people
                   </label>
                 </li>
                 <li class="legenda-even">
                   <label>
                     <div class="square"></div>
-                    <input type="checkbox" ng-model="legenda.groups.even">Just enough people
+                    <input  type="checkbox" 
+                            ng-click="alterLegenda(legenda)" 
+                            ng-model="legenda.groups.even">Just enough people
                   </label>
                 </li>
                 <li class="legenda-less">
                   <label>
                     <div class="square"></div>
-                    <input type="checkbox" ng-model="legenda.groups.less">Less people
+                    <input  type="checkbox" 
+                            ng-click="alterLegenda(legenda)" 
+                            ng-model="legenda.groups.less">Less people
                   </label>
                 </li>
               </ul>
