--- a/js/views/planboard.html
+++ b/js/views/planboard.html
@@ -451,7 +451,7 @@
               </ul>
             </div>
 
-            <div class="legenda-row">
+            <div class="legenda-row last-legenda-row">
               <strong>Groups</strong>
               <ul>
                 <li class="legenda-more">
