--- a/css/timeline.css
+++ b/css/timeline.css
@@ -40,58 +40,88 @@
   overflow: hidden;
 }
 
-#groupPie {
-  /*width: 50%;*/
-  float: left;
+#groupStats {
+  display: block;
 }
 
 #memberBars {
-  /*background-color: red;*/
-  /*width: 50%;*/
-  float: left;
 }
 
+#memberBars ul {
+  list-style: none;
+}
 
+#memberBars ul li {
+  float: left;
+  width: 280px;
+  height: 110px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
 
-#memberBars .bar {
-  width: 300px;
+#memberBars ul li h4 {
+  
+}
+
+#memberBars ul li .bar {
+  width: 100%;
 }
 
 
 
 #memberBars .bar-Available {
- 
   background-color: #4f824f;
-  background-image: none;
-/*  background-image: -moz-linear-gradient(top, #4f824f, #4f824f);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4f824f), to(#4f824f));
-  background-image: -webkit-linear-gradient(top, #4f824f, #4f824f);
-  background-image: -o-linear-gradient(top, #4f824f, #4f824f);
-  background-image: linear-gradient(to bottom, #4f824f, #4f824f);
-  background-repeat: repeat-x;*/
-/*  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff62c462', endColorstr='#ff57a957', GradientType=0);*/
-  
+  background-image: -moz-linear-gradient(top, #4f824f, #406940);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4f824f), to(#406940));
+  background-image: -webkit-linear-gradient(top, #4f824f, #406940);
+  background-image: -o-linear-gradient(top, #4f824f, #406940);
+  background-image: linear-gradient(to bottom, #4f824f, #406940);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4f824f', endColorstr='#ff406940', GradientType=0);
 }
-#memberBars .bar-BeschikbaarZuid {
 
+#memberBars .bar-BeschikbaarZuid {
   background-color: #e08a0c;
-  background-image: none;
-  
+  background-image: -moz-linear-gradient(top, #e08a0c, #c77b0a);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e08a0c), to(#c77b0a));
+  background-image: -webkit-linear-gradient(top, #e08a0c, #c77b0a);
+  background-image: -o-linear-gradient(top, #e08a0c, #c77b0a);
+  background-image: linear-gradient(to bottom, #e08a0c, #c77b0a);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe08a0c', endColorstr='#ffc77b0a', GradientType=0);
 }
+
 #memberBars .bar-BeschikbaarNoord {
-  background-color: black;
-  background-image: none;
-  
+  background-color: #1a1a1a;
+  background-image: -moz-linear-gradient(top, #1a1a1a, #050505);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1a1a1a), to(#050505));
+  background-image: -webkit-linear-gradient(top, #1a1a1a, #050505);
+  background-image: -o-linear-gradient(top, #1a1a1a, #050505);
+  background-image: linear-gradient(to bottom, #1a1a1a, #050505);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1a1a1a', endColorstr='#ff050505', GradientType=0);  
 }
+
 #memberBars .bar-SchipperVanDienst {
   background-color: #e0c100;
-  background-image: none;
-  
+  background-image: -moz-linear-gradient(top, #e0c100, #c7ac00);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e0c100), to(#c7ac00));
+  background-image: -webkit-linear-gradient(top, #e0c100, #c7ac00);
+  background-image: -o-linear-gradient(top, #e0c100, #c7ac00);
+  background-image: linear-gradient(to bottom, #e0c100, #c7ac00);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe0c100', endColorstr='#ffc7ac00', GradientType=0); 
 }
+
 #memberBars .bar-Unavailable {
-  background-color: #a93232;  
-  background-image: none;
-  
+  background-color: #a93232;
+  background-image: -moz-linear-gradient(top, #a93232, #8f2b2b);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#a93232), to(#8f2b2b));
+  background-image: -webkit-linear-gradient(top, #a93232, #8f2b2b);
+  background-image: -o-linear-gradient(top, #a93232, #8f2b2b);
+  background-image: linear-gradient(to bottom, #a93232, #8f2b2b);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffa93232', endColorstr='#ff8f2b2b', GradientType=0);  
 }
 
 
@@ -174,21 +204,15 @@
 }
 
 .legenda-row .legenda-BeschikbaarZuid .square {
-  border-top:6px solid #e08a0c;
-  background-color: #4f824f;
-  height: 6px;  
+  background-color: #e08a0c;
 }
 
 .legenda-row .legenda-BeschikbaarNoord .square {
-  border-top:6px solid black; 
-  background-color: #4f824f; 
-  height: 6px
+  background-color: black; 
 }
 
 .legenda-row .legenda-SchipperVanDienst .square {
-  border-top:6px solid #e0c100; 
-  background-color: #4f824f; 
-  height: 6px;  
+  background-color: #e0c100; 
 }
 
 .legenda-row .legenda-Unavailable .square {
@@ -223,7 +247,7 @@
 
 div.timeline-frame {
     border: 1px solid #ddd;
-  background-color: #fff;
+    background-color: #fff;
     overflow: hidden;
     margin-bottom: 30px;
 }
@@ -264,6 +288,8 @@ div.timeline-event {
     /*border-color: #ddd;*/
     /*background-color: #D5DDF6;*/
     display: inline-block;
+
+    /*padding: 0;*/
 }
 
 div.timeline-event-selected {
@@ -298,10 +324,10 @@ div.timeline-event-dot {
 }
 
 div.timeline-event-range {
-    border-style: solid;
+    /*border-style: solid;
     border-width: 1px;
     border-radius: 2px;
-    -moz-border-radius: 2px;  /* For Firefox 3.6 and older */
+    -moz-border-radius: 2px;  /* For Firefox 3.6 and older */*/
 }
 
 div.timeline-event-range-drag-left {
@@ -516,58 +542,33 @@ div.timeline-navigation-move-right {
 
 
 
-
 .state-available {
-    margin:0;
     background-color: #4f824f;
-    /*border:1px solid #4f824f;*/
-    border-bottom: 10px solid #4f824f;
     text-indent: -9999px;
 }
 
 .state-available-south {
-    margin:0;
-    background-color: #4f824f;
-    /*border:1px solid #4f824f;*/
+    background-color: #e08a0c;
     text-indent: -9999px;
-    border-bottom: 10px solid #e08a0c;
 }
 
 .state-available-north {
-    margin:0;
-    background-color: #4f824f;
-    /*border:1px solid #4f824f;*/
-    border-bottom: 10px solid black;
+    background-color: black;
     text-indent: -9999px;
 }
 
 .state-schipper-service {
-    margin:0;
-    background-color: #4f824f;
-    /*border:1px solid #4f824f;*/
-    border-bottom: 10px solid #e0c100;
+    background-color: #e0c100;
     text-indent: -9999px;
 }
 
 .state-unreached {
-    margin:0;
     background-color: #65619b;
-    /*border:1px solid #65619b;*/
-    border-bottom: 10px solid #65619b;
     text-indent: -9999px;
 }
 
 .state-unavailable {
-    margin: 5px;
-    white-space: nowrap;
-    overflow: hidden;
-
-    margin: 0;
-    
     background-color: #a93232;
-     
-    /*border:1px solid #a93232;*/   
-    border-bottom: 10px solid #a93232;
     text-indent: -9999px;
 }
 
